                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 21-03-2005 changed: Autorun priority runs: DVD->(S)VCD->PICTURE disc->Video->Music->Pictures.
  - 21-03-2005 fixed: [ 1165273 ] Resume Play doesn't work on stacked items.
  - 21-03-2005 fixed: Only the first item in a stacked video appeared in the database views.
  - 21-03-2005 removed: Fuzzy stacking.
  - 21-03-2005 fixed: Slideshow on a dir with just 1 item in it would cause a crash.
  - 21-03-2005 fixed: Homepage buttonscroller images were deallocated and reallocated every frame.  No decent workaround available at present, so they are always allocated.
  - 21-03-2005 fixed: After seek or ff/rw in music, first 1/4 of a second of audio is from another part of the file.
  - 21-03-2005 changed: Removed autosync=30 from mplayer.conf as it shouldn't be needed with the better audiorender accuracy.
  - 21-03-2005 changed: Improved xbmc's audio renderers accuracy in reporting correct amount in buffers. 
  - 20-03-2005 fixed: Htmlparser didnt account for a true ampersand (example: genre 'R&B' from allmusic.com was parsed as 'R')
  - 20-03-2005 fixed: [ 1166726 ] Playback of some AVI files is corrupted.
  - 19-03-2005 added: <keepaspectratio> tag to images + infoimages.  Fixes SF bug 1162592.
  - 19-03-2005 changed: Games bookmark defaults to F: now (so that the <default> tag works correctly)
  - 19-03-2005 fixed: Progress control didn't offset from the window's <posx>, <posy> coordinates.  Skins that have worked around this bug need fixing.
  - 19-03-2005 fixed: Subtitle size in Hardware overlays mode.